--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "webpack-cli": "^4.8.0",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
